# crashloggerpp

./: .clangd  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  compile_commands.json
.github/workflows/: build.yml  release.yml
cmake/: mingw-w64-i686.cmake  mingw-w64-x86_64.cmake
include/: crash_handler.h  crashloggerpp.h
src/: crash_handler.cpp  crashloggerpp.def  dllmain.cpp
